# finops-platform

./: .gitignore  README.md  pyproject.toml
finops_backtest/: __init__.py  __main__.py  engine.py  mcp_server.py
finops_backtest/data/: __init__.py  models.py
finops_backtest/llm/: __init__.py  client.py
finops_backtest/metrics/: __init__.py  c_metrics.c  c_metrics.h  ffi_build.py  metrics.py
tests/: test_engine.py  test_llm.py  test_mcp_server.py  test_metrics.py
